Modified tester console appearences